@@ -5,12 +5,12 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = @subdirs2@ doc
 
 EXTRA_DIST =			\
-	fuse.pc.in		\
+	fuse3.pc.in		\
 	README*			\
 	Filesystems		\
 	FAQ
 
 pkgconfigdir = @pkgconfigdir@
-pkgconfig_DATA = fuse.pc
+pkgconfig_DATA = fuse3.pc
 
 $(pkgconfig_DATA): config.status
