@@ -1,3 +1,10 @@
+2013-07-25  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: fuse -> fuse3.  Allow 2.X and 3.X to coexist.  Includes
+	are now stored under /usr/include/fuse3 and library is named
+	libfuse3.*.  Invoke pkg-config with "fuse3" as the first argument
+	to build with version 3 of the library.
+
 2013-07-24  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: remove "-D_FILE_OFFSET_BITS=64" from fuse.pc, add
